<resources>
    <string name="app_name">App Deteccion</string>
    <string name="app_de_registro_de_colorimetria">App de Registro de Colorimetria</string>
    <string name="bienvenid">Bienvenid@!</string>
    <string name="toma_de_muestras">Toma de Muestras</string>
    <string name="im_genes_a_capturar">Imágenes a Capturar</string>
    <string name="imagen_1">Imagen 1</string>
    <string name="imagen_2">Imagen 2</string>
    <string name="imagen_3">Imagen 3</string>
    <string name="imagen_4">Imagen 4</string>
    <string name="todo">TODO</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="app_de_colorimetr_a">App de Colorimetría</string>
    <string name="bienvenida">BIENVENID@</string>
    <string name="cargando_interfaz">Cargando interfaz</string>
    <string name="detalle">Para sacar una foto pulse en Tomar Foto. El resultado se verá en la pantalla. Abajo podrá ver los colores dominantes.</string>
    <string name="colores_predominantes">COLORES PREDOMINANTES</string>
    <string name="vibrant">Vibrant</string>
    <string name="light_vibrant">Light Vibrant</string>
    <string name="muted">Muted</string>
    <string name="dark_muted">Dark Muted</string>
    <string name="dark_vibrant">Dark Vibrant</string>
    <string name="light_muted">Light Muted</string>
    <string name="busqueda_galeria">Busqueda Galeria</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
